--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -16,9 +16,9 @@ jobs:
     name: Contracts
     uses: TerraDharitri/drt-sc-actions/.github/workflows/contracts.yml@v0.1.19
     with:
-      rust-toolchain: 1.82
+      rust-toolchain: stable
       path-to-sc-meta: framework/meta
-      drt-go-scenario-version: v0.0.2-4
+      drt-go-scenario-version: v0.0.4
       enable-interactor-tests: true
       coverage-args: --ignore-filename-regex='meta/src' --ignore-filename-regex='wasm-adapter' --ignore-filename-regex='benchmarks/' --ignore-filename-regex='tests/' --output ./coverage.md
     secrets:
