--- a/.github/workflows/actions-nightly.yml
+++ b/.github/workflows/actions-nightly.yml
@@ -16,10 +16,10 @@ jobs:
     name: Contracts (nightly)
     uses: TerraDharitri/drt-sc-actions/.github/workflows/contracts.yml@v0.1.19
     with:
-      rust-toolchain: nightly-2024-05-22
+      rust-toolchain: nightly
       path-to-sc-meta: framework/meta
       enable-contracts-size-report: false
-      drt-go-scenario-version: v0.0.2-4
+      drt-go-scenario-version: v0.0.4
       coverage-args: --ignore-filename-regex='meta/src' --ignore-filename-regex='wasm-adapter' --ignore-filename-regex='benchmarks/' --ignore-filename-regex='tests/' --output ./coverage.md
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
