--- a/.github/workflows/template-test-released.yml
+++ b/.github/workflows/template-test-released.yml
@@ -22,14 +22,14 @@ jobs:
         uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           default: true
-          toolchain: 1.82
+          toolchain: stable
           target: wasm32-unknown-unknown
 
       - name: Install prerequisites
         run: |
           cargo install wasm-opt
           cargo install --path framework/meta
-          sc-meta install drt-go-scenario --tag v3.0.0
+          sc-meta install drt-go-scenario --tag v0.0.4
 
           which wasm-opt
           which drt-go-scenario
