--- a/framework/scenario/Cargo.toml
+++ b/framework/scenario/Cargo.toml
@@ -47,7 +47,7 @@ version = "1.18.2"
 path = "../../sdk/scenario-format"
 
 [dependencies.dharitri-vm-executor]
-version = "1.0.4"
+version = "=1.0.4"
 
 [dependencies.dharitri-chain-vm]
 version = "=1.18.2"
