--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -25,7 +25,7 @@ jobs:
           target: wasm32-unknown-unknown
 
       - name: Install sc-meta
-        run: cargo install dharitri-sc-meta
+        run: cargo install dharitri-sc-meta@1.18.2
 
       - name: Run sc-meta commands
         run: |
