--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,8 +13,10 @@ permissions:
 jobs:
   contracts:
     name: Contracts
-    uses: TerraDharitri/drt-sc-actions/.github/workflows/contracts.yml@v1.2.6
+    uses: ./.github/workflows/contracts.yml
     with:
       rust-toolchain: nightly-2022-10-12
+      vmtools-version: v1.4.60
+      extra-build-args: --ignore-eei-checks
     secrets:
       token: ${{ secrets.GITHUB_TOKEN }}
